Fixed button z-index

--- a/styles/global.css
+++ b/styles/global.css
@@ -166,6 +166,7 @@ a {
     backdrop-filter: blur(5px);
     padding: 1vh;
     text-align: center;
+    z-index: 1000;
 }
 
 .scroll-button {
